fixed spacing to be more readable

--- a/css/style.scss
+++ b/css/style.scss
@@ -6,7 +6,7 @@
 
 body {
 	padding: 0 10px;
-	line-height: 15px;
+	line-height: 16px;
 	margin-top: -10px;
 }
 
@@ -16,6 +16,9 @@ body {
 
 h1,h2,h3,h4,h5,h6 {
 	margin: 0;
+}
+p {
+	margin-bottom: 5px;
 }
 
 /* Custom container */
